<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="28dp"
        android:gravity="center"
        >


        <Button
            android:id="@+id/meetings_btn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="Create"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/profile_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/friends_btn"
            android:layout_width="130dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textSize="20sp" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:padding="28dp"
            android:id="@+id/line">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textColor="@color/main_color"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/home_unique"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Public Meetings"
                android:layout_marginBottom="30dp"
                android:alpha="0.7"
                android:textStyle="bold"
                android:textSize="20dp"/>
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Topic 1"
                android:textStyle="bold"
                android:textSize="30dp"
                android:id="@+id/topic1"/>

            <Button
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:id="@+id/meeting_1"
                android:text="Meeting Details"
                android:textSize="30sp"
                android:paddingBottom="5dp"/>
-->
        </LinearLayout>




    </androidx.cardview.widget.CardView>


</RelativeLayout>

