...
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_input"
                android:alpha="0.7"/>

            <Button
                android:layout_marginTop="170dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send_btn"
                android:layout_marginBottom="20dp"
                android:text="Send"
                android:textSize="30dp"
                />


...
