<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friends">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="28dp"
        android:gravity="center">

        <Button
            android:id="@+id/meetings_btn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="Meetings"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile_btn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textSize="20sp" />

        <Button
            android:id="@+id/friends_btn"
            android:layout_width="130dp"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:padding="28dp"
            android:id="@+id/line">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Friends"
                android:textColor="@color/main_color"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/friends_unique"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Friends"
                android:layout_marginBottom="30dp"
                android:alpha="0.7"
                android:textStyle="bold"
                android:textSize="20dp" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <LinearLayout
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:padding="28dp"></LinearLayout>
            </ScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Suggestions based on interests"
                android:layout_marginBottom="30dp"
                android:alpha="0.7"
                android:textStyle="bold"
                android:textSize="20dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="186dp">

                <LinearLayout
                    android:id="@+id/suggestions"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    android:padding="28dp"></LinearLayout>
            </ScrollView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
