...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/main_color"
                android:textSize="32sp"
                android:textStyle="bold"
                android:id="@+id/profile_unique"/>


            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

...
