...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp"
            android:id="@+id/meetings">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Meeting Details"
                android:textColor="@color/main_color"
...
